Fix player seats rendering behind table felt
Add z-index: 1 to .table-felt so player seats (z-index: 2) always
stack above the green felt surface.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -515,6 +515,7 @@ body {
 
 .table-felt {
   position: absolute;
+  z-index: 1;
   top: 18%;
   left: 12%;
   right: 12%;
